testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/missing_param_instance.lkql
val rules = @{
    headers: {instance_name: "custom_instance"}
}
